--- a/css/admin/message.css
+++ b/css/admin/message.css
@@ -1,13 +1,13 @@
-.spacious-message {
+.esteem-message {
 	overflow: hidden;
 	position: relative;
 	border-left-color: #2ea2cc !important;
 }
-.spacious-message a.button-primary,
-.spacious-message a.button-secondary {
+.esteem-message a.button-primary,
+.esteem-message a.button-secondary {
 	text-decoration: none !important;
 }
-.spacious-message a.spacious-message-close {
+.esteem-message a.esteem-message-close {
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -16,7 +16,7 @@
 	line-height: 1.23076923;
 	text-decoration: none;
 }
-.spacious-message a.spacious-message-close:before {
+.esteem-message a.esteem-message-close:before {
 	position: absolute;
 	top: 8px;
 	left: 0;
