--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Description: Esteem is a clean multipurpose responsive WordPress theme designed 
 Version: 1.3.2
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: light, white, two-columns, right-sidebar, left-sidebar, fluid-layout, responsive-layout, custom-header, custom-background, custom-menu, custom-colors, sticky-post, threaded-comments, translation-ready, featured-images, theme-options, post-formats
+Tags: one-column, two-columns, right-sidebar, left-sidebar, flexible-header, custom-background, custom-colors, custom-header, custom-menu, featured-images, footer-widgets, e-commerce, blog
 Text Domain: esteem
 
 Resetting and rebuilding styles have been helped along thanks to the fine work of
