--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: Esteem
-Theme URI: http://themegrill.com/themes/esteem/
+Theme URI: https://themegrill.com/themes/esteem/
 Author: ThemeGrill
-Author URI: http://themegrill.com
-Description: Esteem is a clean multipurpose responsive WordPress theme designed to fit business, portfolio, blogging or any type of site. The theme supports custom header, custom background, custom widgets, page templates and has built in options panel to configure primary color, site logo, slider, sidebar layout and 3 blog layout. It's also fully compatible with popular plugins like contact Form 7, WP PageNavi and Breadcrumb Navxt and is translation ready. Get free support at http://themegrill.com/support-forum/ and check the demo at http://demo.themegrill.com/esteem/.
+Author URI: https://themegrill.com
+Description: Esteem is a clean multipurpose responsive WordPress theme designed to fit business, portfolio, blogging or any type of site. The theme supports custom header, custom background, custom widgets, page templates and has built in options panel to configure primary color, site logo, slider, sidebar layout and 3 blog layout. It's also fully compatible with popular plugins like contact Form 7, WP PageNavi and Breadcrumb Navxt and is translation ready. Get free support at https://themegrill.com/support-forum/ and check the demo at https://demo.themegrill.com/esteem/.
 Version: 1.3.4
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
