--- a/style.css
+++ b/style.css
@@ -1018,6 +1018,42 @@ h3#site-title{
     margin-bottom: 20px;
     padding-bottom: 15px;
 }
+
+.related-posts-main-title {
+	margin-bottom: 20px;
+}
+.related-posts-wrapper .post-thumbnails {
+	margin-bottom: 10px;
+}
+#content .related-posts-wrapper .entry-title {
+	font-size: 22px;
+	padding-bottom: 5px;
+}
+
+.related-posts-wrapper .entry-title a {
+	color: #2C2C2C;
+}
+
+.related-posts-wrapper .entry-title a:hover {
+	color: #ED564B;
+}
+
+.related-posts-wrapper  .entry-meta {
+	border: 0 none;
+	padding: 0;
+	font-size: 12px;
+}
+
+.related-posts-wrapper  .entry-meta > span {
+	padding-right: 10px;
+}
+.related-posts-wrapper  .entry-meta  i {
+	padding-right: 5px;
+}
+.related-posts-wrapper  .entry-meta  a {
+	color: inherit;
+}
+
 .error-404.not-found {
     text-align: center;
     padding-bottom: 20px;
