--- a/style.css
+++ b/style.css
@@ -742,7 +742,7 @@ a:active {
 	padding-top: 5px;
 }
 
-ul.wp-block-gallery.columns-3.is-cropped{
+ul.wp-block-gallery.columns-3.is-cropped {
 	margin: 0;
 }
 
@@ -821,6 +821,14 @@ input[type="password"] {
 .comments-title {
 	font-size: 28px;
 	line-height: 35px;
+}
+
+#respond form .comment-form-cookies-consent #wp-comment-cookies-consent {
+	margin-right: 5px;
+}
+
+#respond form .comment-form-cookies-consent label {
+	display: inline-block;
 }
 
 /* =SEARCH WIDGET
