--- a/style-editor-block.css
+++ b/style-editor-block.css
@@ -19,3 +19,11 @@
 	color: #333333;
 	font-weight: normal;
 }
+
+.wp-block {
+	max-width: 1140px;
+}
+
+.editor-styles-wrapper .wp-block[data-align="wide"] {
+	max-width: 1190px;
+}
