--- a/style-editor-block.css
+++ b/style-editor-block.css
@@ -27,3 +27,55 @@
 .editor-styles-wrapper .wp-block[data-align="wide"] {
 	max-width: 1190px;
 }
+
+/* Theme specific CSS */
+/* Headings */
+.editor-styles-wrapper h1,
+.editor-styles-wrapper h2,
+.editor-styles-wrapper h3,
+.editor-styles-wrapper h4,
+.editor-styles-wrapper h5,
+.editor-styles-wrapper h6 {
+	clear: both;
+}
+
+.editor-styles-wrapper h1,
+.editor-styles-wrapper h2,
+.editor-styles-wrapper h3,
+.editor-styles-wrapper h4,
+.editor-styles-wrapper h5,
+.editor-styles-wrapper h6 {
+	font-weight: normal;
+	font-family: 'Arial', sans-serif;
+	color: #333333;
+}
+
+.editor-styles-wrapper h1 {
+	font-size: 30px;
+	line-height: 36px;
+}
+
+.editor-styles-wrapper h2 {
+	font-size: 28px;
+	line-height: 35px;
+}
+
+.editor-styles-wrapper h3 {
+	font-size: 26px;
+	line-height: 32px;
+}
+
+.editor-styles-wrapper h4 {
+	font-size: 24px;
+	line-height: 30px;
+}
+
+.editor-styles-wrapper h5 {
+	font-size: 22px;
+	line-height: 28px;
+}
+
+.editor-styles-wrapper h6 {
+	font-size: 20px;
+	line-height: 25px;
+}
