Tweak - Responsive CSS for alignfull and alignwide

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,9 +1,17 @@
 /* =RESPONSIVE STRUCTURE
 ----------------------------------------------- */
 @media screen and (max-width: 1500px) {
-	.no-sidebar-full-width .alignwide {
-		margin-left: -20px;
-		margin-right: -20px;
+	.no-sidebar-full-width #primary .entry-content > .alignwide {
+		margin-left: -100px;
+		margin-right: -100px;
+	}
+	.no-sidebar #primary .entry-content > .alignwide {
+		margin-left: -50px;
+		margin-right: -50px;
+	}
+	.no-sidebar #primary .entry-content > .alignfull {
+		margin-left: -100px;
+		margin-right: -100px;
 	}
 }
 
@@ -27,7 +35,7 @@
 
 @media screen and (max-width: 1078px) {
 
-	.no-sidebar-full-width .alignwide {
+	.no-sidebar-full-width #primary .entry-content > .alignwide {
 		margin-left: -10px;
 		margin-right: -10px;
 	}
@@ -158,9 +166,19 @@
 		margin-bottom: 30px;
 	}
 
-	.no-sidebar .alignwide {
+	.no-sidebar #primary .entry-content > .alignwide {
 		margin-left: -10px;
 		margin-right: -10px;
+	}
+	.no-sidebar-full-width.boxed #primary .entry-content > .alignwide,
+	.no-sidebar.boxed #primary .entry-content > .alignwide {
+		margin-left: -10px;
+		margin-right: -10px;
+	}
+	.no-sidebar-full-width.boxed #primary .entry-content > .alignfull,
+	.no-sidebar.boxed #primary .entry-content > .alignfull {
+		margin-left: -30px;
+		margin-right: -30px;
 	}
 }
 
@@ -248,8 +266,8 @@
 		margin-left: 0;
 	}
 
-	.no-sidebar-full-width .alignwide,
-	.no-sidebar .alignwide {
+	.no-sidebar-full-width #primary .entry-content > .alignwide,
+	.no-sidebar #primary .entry-content > .alignwide {
 		margin-left: 0;
 		margin-right: 0;
 	}
