--- a/style-editor-block.css
+++ b/style-editor-block.css
@@ -83,6 +83,7 @@
 /* Horizontal Lines */
 .editor-styles-wrapper hr {
 	background-color: #cccccc;
+	border: 0;
 	height: 1px;
 	margin-bottom: 1.5em;
 }
