--- a/style.css
+++ b/style.css
@@ -1338,7 +1338,8 @@ h3#site-title {
 	width: unset;
 }
 
-.no-sidebar-full-width.boxed #primary .entry-content > .alignfull {
+.no-sidebar-full-width.boxed #primary .entry-content > .alignfull,
+.no-sidebar.boxed #primary .entry-content > .alignfull {
 	margin-left: -30px;
 	margin-right: -30px;
 	width: unset;
@@ -1350,7 +1351,8 @@ h3#site-title {
 	width: unset;
 }
 
-.no-sidebar-full-width.boxed #primary .entry-content > .alignwide {
+.no-sidebar-full-width.boxed #primary .entry-content > .alignwide,
+.no-sidebar.boxed #primary .entry-content > .alignwide {
 	margin-left: -15px;
 	margin-right: -15px;
 	max-width: unset;
